# Edriel

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
Edriel/: CMakeLists.txt  Client.cpp  Edriel.cpp  Edriel.hpp  Server.cpp  concepts.hpp  config.cpp  config.hpp  error_codes.hpp  main.cpp  memory_pool.cpp  memory_pool.hpp  retry_policy.cpp  retry_policy.hpp
Edriel/modules/: discovery.hpp  participant_manager.hpp  topic_manager.cpp  topic_manager.hpp
Edriel/test/: CMakeLists.txt  benchmark.cpp  test_cleaner.cpp  test_integration.cpp  test_magnitude.cpp  test_participant.cpp  test_topic_manager.cpp
Proto/: autoDiscovery.proto  autoDiscovery_grpc_service.proto  hello.proto
